# starknet-spells-mainnet

./: .eslintrc.json  .gitignore  README.md  hardhat.config.ts  package.json  pyproject.toml  tsconfig.json
.github/workflows/: tests.yml
scripts/: devnet.sh
src/: addresses.ts  spell.cairo  spell.test.ts
src/abis/: daiAbi.ts  l2DaiBridgeAbi.ts  l2DaiTeleportGatewayAbi.ts  l2GovernanceRelayAbi.ts  l2_dai_bridge_abi.json  l2_dai_teleport_gateway_abi.json  l2_governance_relay_abi.json
src/utils/: abi.ts  contractTypes.ts  utils.ts  wrap.ts
