[tool.poetry]
name = "starknet-spells-goerli"
version = "0.0.1"
description = "Starknet Spells Goerli"
authors = ["MakerDAO"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pytest = "^6.2.5"
pytest-asyncio = "0.15.1"
cairo-lang = "0.10.3"
dill = "0.3.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
